--- a/html/CV.html
+++ b/html/CV.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="html,cheatsheet" />
     <meta property="fb:admins" content="YourFacebookUsername" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 
     <!-- Prepare for second course -->
     <script src="/script.js"></script>
@@ -23,7 +23,16 @@
   </head>
 
   <body>
-    <h1>CV Naim Faris</h1>
-    <img src="img/perfil.jpg" alt="">
+    <div>
+      <nav class="nav">
+        <a href="">Link 1</a>
+        <a href="">Link 2</a>
+        <a href="">Link 3</a>
+      </nav>
+      <img class="img_perfil" src="../img/perfil.png" alt="" />
+      <h1>Naim Faris Benages</h1>
+      <h3>Estudiant</h3>
+      <p>Lleida</p>
+    </div>
   </body>
 </html>
