--- a/html/CV.html
+++ b/html/CV.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="html,cheatsheet" />
     <meta property="fb:admins" content="YourFacebookUsername" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+    <link rel="stylesheet" href="../css/normalised.css">
     <link rel="stylesheet" href="../css/style.css" />
 
     <!-- Prepare for second course -->
@@ -24,12 +25,13 @@
 
   <body>
     <div>
-      <nav class="nav">
-        <a href="">Link 1</a>
-        <a href="">Link 2</a>
-        <a href="">Link 3</a>
-      </nav>
+      <ul>
+        <li><a href="">Link 1</a></li>
+        <li><a href="">Link 2</a></li>
+        <li><a href="">Link 3</a></li>
+      </ul>
       <img class="img_perfil" src="../img/perfil.png" alt="" />
+
       <h1>Naim Faris Benages</h1>
       <h3>Estudiant</h3>
       <p>Lleida</p>
