--- a/html/CV.html
+++ b/html/CV.html
@@ -31,7 +31,7 @@
         <li><a href="">Link 3</a></li>
       </ul>
       <img class="img_perfil" src="../img/perfil.png" alt="" />
-
+      HOla
       <h1>Naim Faris Benages</h1>
       <h3>Estudiant</h3>
       <p>Lleida</p>
