--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <li><a href="">Link 2</a></li>
         <li><a href="">Link 3</a></li>
       </ul>
-      <img class="img_perfil" src="../img/perfil.png" alt="" />
-      HOla
+      <img class="img_perfil" src="img/perfil.png" alt="" />
+      
       <h1>Naim Faris Benages</h1>
       <h3>Estudiant</h3>
       <p>Lleida</p>
