--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="html,cheatsheet" />
     <meta property="fb:admins" content="YourFacebookUsername" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-    <link rel="stylesheet" href="../css/normalised.css">
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/normalised.css">
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- Prepare for second course -->
     <script src="/script.js"></script>
