--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Page Title</title>
+    <title>CV NAIM FARIS</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A brief page description" />
@@ -11,6 +11,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link rel="stylesheet" href="css/normalised.css">
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     <!-- Prepare for second course -->
     <script src="/script.js"></script>
@@ -25,13 +26,13 @@
 
   <body>
     <div>
-      <ul>
-        <li><a href="">Link 1</a></li>
-        <li><a href="">Link 2</a></li>
-        <li><a href="">Link 3</a></li>
-      </ul>
+      <div class="w3-bar w3-black">
+        <a href="#" class="w3-bar-item w3-button w3-mobile">Home</a>
+        <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
+        <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
+        <a href="#" class="w3-bar-item w3-button w3-mobile">Link 3</a>
+      </div>
       <img class="img_perfil" src="img/perfil.png" alt="" />
-      
       <h1>Naim Faris Benages</h1>
       <h3>Estudiant</h3>
       <p>Lleida</p>
