--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     <div>
       <div class="w3-bar w3-black">
         <a href="#" class="w3-bar-item w3-button w3-mobile">Home</a>
-        <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
-        <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
-        <a href="#" class="w3-bar-item w3-button w3-mobile">Link 3</a>
+        <a href="#" class="w3-bar-item w3-button w3-mobile">Idiomes</a>
+        <a href="#" class="w3-bar-item w3-button w3-mobile">Estudis</a>
+        <a href="#" class="w3-bar-item w3-button w3-mobile">Experiencia i habilitats</a>
+        
       </div>
       <img class="img_perfil" src="img/perfil.png" alt="" />
       <h1>Naim Faris Benages</h1>
