--- a/html/flex.html
+++ b/html/flex.html
@@ -10,7 +10,7 @@
     <meta property="fb:admins" content="YourFacebookUsername" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link rel="stylesheet" href="../css/normalised.css" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/flex.css" />
 
     <!-- Prepare for second course -->
     <script src="/script.js"></script>
